# garfield

./: README.md  pyproject.toml
data/splits/: train.txt  val.txt
src/configs/: config.py
src/data/: dataset.py  transforms.py
src/data_preparation/: create_split.py
src/models/: unet152.py
src/training/: train.py  trainer.py
src/utils/: checkpoint_utils.py  visualize.py
submission/: inference.py  inference_tta.py  swin.py  swin2.py  unet152.py
